RESOLVED FIXED298842
[JSC] Assert that values are not empty in call and callWithArguments arguments
https://bugs.webkit.org/show_bug.cgi?id=298842
Summary [JSC] Assert that values are not empty in call and callWithArguments arguments
Sosuke Suzuki
Reported 2025-09-14 19:00:55 PDT
Passing empty JSValues to `JSC::call` and `cachedCall->callWithArguments` sometimes causes crashes. This patch adds assertions to verify that all arguments are not empty.
Attachments
Sosuke Suzuki
Comment 1 2025-09-14 19:02:27 PDT
EWS
Comment 2 2025-09-15 19:29:59 PDT
Committed 300003@main (92935b22b9a6): <https://commits.webkit.org/300003@main> Reviewed commits have been landed. Closing PR #50725 and removing active labels.
Alexey Proskuryakov
Comment 3 2025-09-15 21:52:02 PDT
Note You need to log in before you can comment on or make changes to this bug.