[JSC] Assert that values are not empty in call and callWithArguments arguments https://bugs.webkit.org/show_bug.cgi?id=298842

Reviewed by Justin Michaud.

Passing empty JSValues to `JSC::call` and `cachedCall->callWithArguments` sometimes causes crashes.
This patch adds assertions to verify that all arguments are not empty.

* Source/JavaScriptCore/interpreter/CachedCall.h:
(JSC::CachedCall::callWithArguments):
* Source/JavaScriptCore/runtime/CallData.cpp:
(JSC::call):

Canonical link: https://commits.webkit.org/300003@main