Source/JavaScriptCore/interpreter/CachedCall.h
@@ -137,6 +137,18 @@ public:
         VM& vm = m_vm;
         auto scope = DECLARE_THROW_SCOPE(vm);
 
+        ASSERT_WITH_MESSAGE(!thisValue.isEmpty(), "Expected thisValue to be non-empty. Use jsUndefined() if you meant to use undefined.");
+#if ASSERT_ENABLED
+        if constexpr (sizeof...(args) > 0) {
+            size_t argIndex = 0;
+            auto checkArg = [&argIndex](JSValue arg) {
+                ASSERT_WITH_MESSAGE(!arg.isEmpty(), "arguments[%zu] is JSValue(). Use jsUndefined() if you meant to make it undefined.", argIndex);
+                ++argIndex;
+            };
+            (checkArg(args), ...);
+        }
+#endif
+
 #if CPU(ARM64) && CPU(ADDRESS64) && !ENABLE(C_LOOP)
         ASSERT(sizeof...(args) == static_cast<size_t>(m_protoCallFrame.argumentCount()));
         constexpr unsigned argumentCountIncludingThis = 1 + sizeof...(args);
